--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -41,7 +41,9 @@ page-login {
     font-size: 15px;
     font-weight: normal;
 }
-
+.conatiner{
+    margin: 0 auto;
+}
 // LOGIN BUTTON and FORGOT PASSWORD SECTION //
 .page-button{
     font-size: 15px;
