--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -84,24 +84,25 @@ page-my-visit {
 }
 
 .button-clear{
-    font-size: 19px;
-    margin: 0 !important;
-    color: #00677f;
+    font-size: 20px;
+    margin: 20px 0 !important;
+    color: #000;
+    font-family: 'Segoe UI';
     font-weight: normal;
-    padding: 12.5px 10px 0 0;
+    padding: 0px 0px 0 0 !important;
 }
 
 .button-clear i{
-    font-size: 15px;
-    margin:0 0 0 5px;
+    font-size: 20px;
+    margin:0 0 0 10px;
     color: #0099cc;
     font-weight: lighter;
 }
 
 .locationDetails{
     background: #2b2825;
-    margin: 10px;
-    border-radius: 2px;
+    margin: 0px 10px;
+    border-radius: 7px;
     font-size: 15px;
     color:#fff;
 }
@@ -110,8 +111,8 @@ page-my-visit {
     border-radius: 10px;
     color: #fff;
     padding: 4.5%;
-    margin-top: 15px;
-    margin-left: 10px;
+    margin: 15px 10px 0px 10px;
+   
     font-weight: 400;
     font-family: 'Segoe UI';
     font-size: 12px;
@@ -158,37 +159,42 @@ page-my-visit {
 
 }
 .xyz{
-    width: 100%; 
-    min-height: 4.49%;
+   
+    max-height: 30px;
     background-color: #f5f5f5;
     border-radius: 20px;
     margin-left: 10px;
+    margin-right: 10px; 
+    padding: 0 !important;
   //  border-bottom:1px solid gainsboro;
 }
 
 .details{
-    min-height: 32px;
+    
     width:53%;
     background: transparent !important;
     margin: 0 !important;
     padding: 0 !important; 
     text-transform: none !important;
+    max-height: 30px !important;
 }
 .detailsHeader{
     background: transparent !important;
     text-transform: none !important;
     float: left !important;
     border: none !important;
-    padding-left: 10px !important;
-    margin: 1px  7.46% 1px  3px!important;
+    padding: 2px !important;
+    margin: 1px  28px 1px  3px!important;
     background: transparent !important ;
     font-size: 15px !important;
     color: #000 !important;
-    text-align: left !important;
+    line-height:2.3rem !important;
     max-width: 117px !important;
-    min-height: 28px !important;
+    max-height: 26px !important;
+   
 
 }
+
 
 .agenda{
     margin: 2px  7.46% 2px  3px!important;
@@ -200,7 +206,7 @@ page-my-visit {
     //background: #fff !important;
     font-weight: bold !important;
     color: #fff !important;
-    min-height: 28px !important;
+    max-height: 28px !important;
 
 }
 
@@ -216,15 +222,15 @@ page-my-visit {
 
 .ionItem{
     min-height: 107px; 
-    padding:0 0 0 0px !important;  
-    margin: 0 0 0 10px !important;
+    padding:0 0 0 10px !important;  
+    margin: 0  !important;
  
     border-bottom:1px solid gainsboro !important;
 }
 
-// .start{
-//     min-height: 131px;
-// }
+.list-ios{
+  border:none !important;
+}
 
 .day {
     color: #000;
@@ -290,16 +296,15 @@ page-my-visit {
 }
 
 .segment-activated{
-    margin: 2px  7.46% 2px  3px!important;
+  //  margin: 0px  7.46% 0px  3px!important;
     text-transform: none !important;
-  //  margin: 0 !important;
-
+    line-height: 2.3rem !important;
     background-color: #64A70B !important; 
     border-radius: 20px !important;
-    //background: #fff !important;
+
     font-weight: bold !important;
     color: #fff !important;
-    min-height: 28px !important;
+     max-height: 26px !important;
 }
 
 .label{
