--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,7 +8,7 @@ page-home {
 
 // HEADER SECTION //
 .header{
-    float: left;
+   
     margin: 0;
     padding: 0 0 0 0px;
 }
@@ -22,26 +22,31 @@ page-home {
     max-width: 100%;
     height: 35px !important;
     float: left;
-    margin: 7px 0 0 0px !important;
+    margin: 6px 0 0 10px !important;
+}
+.badge{
+    font-size: 10px !important;
+  
 }
 
 .profile{
     float: right;
-    width: 141px;
-    margin: 0 !important;
-    padding: 0 !important;
+    padding-top: 3px;
 }
 
 .notifiation{
-    font-size:25px;
+    font-size:20px !important;
     position: relative;
     top:5px;
-    right: -13px;
+    padding: 0 !important;
+    margin: 0 !important;
+    right: -15px;
+    color: #000 !important;
 }
 
 .count{
-    background:#00667f;
-    padding: 3px;
+    background: #00667f;
+    padding: 4px;
     border-radius: 50%;
     color: #fff;
     position: relative;
@@ -53,24 +58,26 @@ page-home {
     display:inline-block;
 }
 
-.avatar{
-    max-width: 100% !important;
-    display:inline-block;
-    width:80%;
-}
+
+    .avatar{
+        max-width: 100% !important;
+        display:inline-block;
+        width:30px;
+    }
+
 
 .popOver{
-    font-size: 15px !important;
+    font-size: 9px !important;
     display: inline-block;
     position: relative;
     top: -1px;
-    left: -6px;
+    left: 0px;
+    padding: 0 !important;
+    margin: 0 !important;
     font-weight: lighter;
 }
 
-.popover-content{
-    width: 150px !important;
-}
+
 
 // VISITS SECTION //
 
@@ -119,7 +126,7 @@ page-home {
     font-size: 13px;
     float: right;
     font-weight: normal;
-    width: 29%;
+    width: 27%;
 
 }
 
