--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -3,11 +3,13 @@ page-my-visit {
 // HEADER SECTION //
 
 .header{
-    float: left;
+  
     margin: 0;
     padding: 0 0 0 0px;
 }
-
+.badge{
+    font-size: 10px !important;
+}
 .logoTitle{
     padding: 0 !important;
     display: inline-block;
@@ -17,14 +19,15 @@ page-my-visit {
     max-width: 100%;
     height: 35px !important;
     float: left;
-    margin: 7px 0 0 0px !important;
+    margin: 6px 0 0 10px !important;
 }
 
 .profile{
     float: right;
+    padding-top: 3px;
 }
 
-.notifiation{
+.profile .notifiation{
     font-size:25px;
     position: relative;
     top:5px;
@@ -48,15 +51,15 @@ page-my-visit {
 .avatar{
     max-width: 100% !important;
     display:inline-block;
-    width:80%;
+    width:30px;
 }
 
 .popOver{
-    font-size: 15px !important;
+    font-size: 9px !important;
     display: inline-block;
     position: relative;
     top: -1px;
-    left: -6px;
+    left: 0px;
     font-weight: lighter;
 }
 
@@ -156,8 +159,10 @@ page-my-visit {
     border-radius:2px;
     margin: 10px 0px 0 0px;
     padding: 0 !important;
+ 
 
 }
+
 .xyz{
    
     max-height: 30px;
@@ -179,7 +184,7 @@ page-my-visit {
     max-height: 30px !important;
 }
 .detailsHeader{
-    background: transparent !important;
+    background-color: transparent !important;
     text-transform: none !important;
     float: left !important;
     border: none !important;
@@ -224,8 +229,8 @@ page-my-visit {
     min-height: 107px; 
     padding:0 0 0 10px !important;  
     margin: 0  !important;
- 
-    border-bottom:1px solid gainsboro !important;
+    border-top:none !important;
+    border-bottom:1px solid #c8c7cc !important;
 }
 
 .list-ios{
@@ -249,23 +254,35 @@ page-my-visit {
     font-family: 'Segoe UI';
     margin-bottom: 26px !important;
 }
-
-.timing{
-    margin: 8.2% 0 0 0 !important;
+.titleTopicLunch{
+    // padding-top: 10px;
+     color: #2d2926;
+     font-weight: 500;
+     font-size: 16px;
+     font-family: 'Segoe UI';
+     margin-bottom: 15px !important;
+ }
+.timingLunch{
+    margin: 15px 0 0 0 !important;
     padding-bottom: 5px;
     color: #666;
     font-family: 'Segoe UI';
     font-weight: 500;
     font-size: 12px;
+    max-height: 106px;
 }
 
-.sez{
-    padding-bottom: 5px;
-    padding: 2px;
-    color: #53565a;
-    font-weight: lighter;
+.timing{
+    margin: 26px 0 0 0 !important;
+    padding-bottom: 8px;
+    color: #666;
+    font-family: 'Segoe UI';
+    font-weight: 500;
     font-size: 12px;
+    max-height: 106px;
 }
+
+
 
 .confRoom{
     color: #0099cc;
@@ -278,7 +295,7 @@ page-my-visit {
    
     //border: none !important;
     //padding:10px 0 0px 10px;  
-    //border-bottom: 0.55px solid #c8c7cc !important;
+    border-bottom: 0.55px solid #c8c7cc !important;
 }
 
 // COMMON AND DEFAULT CSS //
@@ -292,10 +309,10 @@ page-my-visit {
 
 .fa{
     font-size: 20px;
-    margin-right: 5px;
+   
 }
 
-.segment-activated{
+.segment-activated,.detailsHeader.active{
   //  margin: 0px  7.46% 0px  3px!important;
     text-transform: none !important;
     line-height: 2.3rem !important;
@@ -338,4 +355,29 @@ page-my-visit {
     border: none !important;
    // padding-bottom: 10px !important;
 }
+
+.agendaTabs{
+    height: 50px;
+    width: 100%;
 }
+.agendaTabs ion-icon{
+    font-size: 17px;
+    width: 48%;
+    font-family: 'segoe UI';
+    color: #666;
+    padding: 16.5px 0 14.5px 10px;
+    border-bottom: 2px solid #fff;
+}
+.agendaTabs ion-icon i.fa{
+    margin-right: 10px;
+}
+.agendaTabs .separator{
+    font-size: 17px;
+}
+.agendaTabs ion-icon.active{
+    color: #00677f;
+    border-bottom: 2px solid #00677f;
+}
+
+}
+
