--- a/src/pages/my-visit/my-visit.scss
+++ b/src/pages/my-visit/my-visit.scss
@@ -1,6 +1,41 @@
 page-my-visit {
 
 // HEADER SECTION //
+.profile{
+    float: right;
+    padding-top: 3px;
+}
+
+.notifiation{
+    font-size:20px !important;
+    position: relative;
+    top:5px;
+    padding: 0 !important;
+    margin: 0 !important;
+    right: -15px;
+    color: #000 !important;
+}
+
+.count{
+    background: #00667f;
+    padding: 4px;
+    border-radius: 50%;
+    color: #fff;
+    position: relative;
+    left: 0px;
+    top: -6px;
+}
+
+.userDetails{
+    display:inline-block;
+}
+
+
+    .avatar{
+        max-width: 100% !important;
+        display:inline-block;
+        width:30px;
+    }
 
 .header{
   
@@ -34,25 +69,10 @@ page-my-visit {
     right: -15px;
 }
 
-.count{
-    background: #00667f;
-    padding: 3px;
-    border-radius: 50%;
-    color: #fff;
-    position: relative;
-    left: 0px;
-    top: -6px;
-}
 
-.userDetails{
-    display:inline-block;
-}
 
-.avatar{
-    max-width: 100% !important;
-    display:inline-block;
-    width:30px;
-}
+
+
 
 .popOver{
     font-size: 9px !important;
@@ -75,10 +95,11 @@ page-my-visit {
 
 .container{
     padding: 0 !important;
-    width: 100%;
+    width: 94%;
     box-shadow: 0px 0 10px 1px gainsboro;
     border-radius: 2px;
-
+    margin: 10px auto;
+    border-radius: 7px;
 }
 
 .subHeader{
@@ -89,6 +110,7 @@ page-my-visit {
 .button-clear{
     font-size: 20px;
     margin: 20px 0 !important;
+    line-height: 1;
     color: #000;
     font-family: 'Segoe UI';
     font-weight: normal;
@@ -97,8 +119,8 @@ page-my-visit {
 
 .button-clear i{
     font-size: 20px;
-    margin:0 0 0 10px;
-    color: #0099cc;
+    margin:0 10px 0 10px;
+    color: #00677f;
     font-weight: lighter;
 }
 
@@ -109,12 +131,15 @@ page-my-visit {
     font-size: 15px;
     color:#fff;
 }
+.locationDetails p .fa{
+    margin-right: 8px;
+}
 .sezLocation{
     background-color:#00667f;
     border-radius: 10px;
     color: #fff;
     padding: 4.5%;
-    margin: 15px 10px 0px 10px;
+    margin: 10px 10px 0px 10px;
    
     font-weight: 400;
     font-family: 'Segoe UI';
@@ -163,40 +188,34 @@ page-my-visit {
 
 }
 
-.xyz{
-   
-    max-height: 30px;
-    background-color: #f5f5f5;
-    border-radius: 20px;
-    margin-left: 10px;
-    margin-right: 10px; 
-    padding: 0 !important;
-  //  border-bottom:1px solid gainsboro;
-}
-
 .details{
-    
-    width:53%;
-    background: transparent !important;
-    margin: 0 !important;
-    padding: 0 !important; 
-    text-transform: none !important;
-    max-height: 30px !important;
+    padding: 3px 10px 5px 5px;
+    height: 34px;
+    display: inline-block;
+    background: #f5f5f5;
+    width: auto;
+    border-radius: 25px;
+    margin-left: 10px;
+    // width:53%;
+    // background: transparent !important;
+    // margin: 0 !important;
+    // padding: 0 !important; 
+    // text-transform: none !important;
+    // max-height: 30px !important;
 }
-.detailsHeader{
-    background-color: transparent !important;
-    text-transform: none !important;
-    float: left !important;
-    border: none !important;
-    padding: 2px !important;
-    margin: 1px  28px 1px  3px!important;
-    background: transparent !important ;
-    font-size: 15px !important;
-    color: #000 !important;
-    line-height:2.3rem !important;
-    max-width: 117px !important;
-    max-height: 26px !important;
-   
+.details.segment .detailsHeader{
+    background-color: transparent;
+    text-transform: none;
+    float: left;
+    border: none;
+    padding: 2px 10px;
+    margin: 1px 10px 1px 3px;
+    background: transparent;
+    font-size: 15px;
+    color: #000;
+    line-height:2.3rem;
+    max-height: 26px;
+    width: auto;
 
 }
 
@@ -226,13 +245,14 @@ page-my-visit {
 }
 
 .ionItem{
-    min-height: 107px; 
-    padding:0 0 0 10px !important;  
+    padding:0 15px !important;  
     margin: 0  !important;
     border-top:none !important;
-    border-bottom:1px solid #c8c7cc !important;
+    border-bottom:1px solid #c8c7cc;
 }
-
+ion-list.agendaList:last-child .item-block{
+    border-bottom: none;
+}
 .list-ios{
   border:none !important;
 }
@@ -274,11 +294,10 @@ page-my-visit {
 
 .timing{
     margin: 26px 0 0 0 !important;
-    padding-bottom: 8px;
     color: #666;
     font-family: 'Segoe UI';
     font-weight: 500;
-    font-size: 12px;
+    font-size: 14px;
     max-height: 106px;
 }
 
@@ -300,7 +319,7 @@ page-my-visit {
 
 // COMMON AND DEFAULT CSS //
 .scroll-content{
-    padding:10px !important;
+    padding:0px !important;
 }
 
 .back-button.show-back-button{
@@ -312,22 +331,21 @@ page-my-visit {
    
 }
 
-.segment-activated,.detailsHeader.active{
+.details .detailsHeader.segment-activated,
+.details .detailsHeader.active{
   //  margin: 0px  7.46% 0px  3px!important;
-    text-transform: none !important;
-    line-height: 2.3rem !important;
-    background-color: #64A70B !important; 
-    border-radius: 20px !important;
-
-    font-weight: bold !important;
-    color: #fff !important;
-     max-height: 26px !important;
+    text-transform: none;
+    line-height: 2.3rem;
+    background-color: #64A70B; 
+    border-radius: 20px;
+    color: #fff;
+    max-height: 26px;
 }
 
 .label{
     color: #000;
     text-align: left;
-    padding-left: 5px;
+    padding: 0 0 0 5px;
     margin: 0;
     max-height: 100%;
 }
@@ -350,6 +368,16 @@ page-my-visit {
 }
 .item-block {
     max-width: 100% !important;
+    padding: 0;
+}
+.list-ios > .item-block .item-inner {
+    padding-right: 0;
+}
+.list-ios > .item-block:first-child {
+    border-top: none; 
+}
+.list-ios > .item-block .label{
+    padding: 0;
 }
 .item-inner{
     border: none !important;
@@ -359,13 +387,15 @@ page-my-visit {
 .agendaTabs{
     height: 50px;
     width: 100%;
+    box-shadow: 0px 0 10px 1px gainsboro;
+    border-radius: 7px 7px 0 0;
 }
 .agendaTabs ion-icon{
     font-size: 17px;
     width: 48%;
     font-family: 'segoe UI';
     color: #666;
-    padding: 16.5px 0 14.5px 10px;
+    padding: 15px 0 13px 14px;
     border-bottom: 2px solid #fff;
 }
 .agendaTabs ion-icon i.fa{
