Design Updates- mobile view

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -199,3 +199,7 @@ $item-border: none;
 input.text-input:-webkit-autofill{
   background: transparent;
 }
+ion-content{
+  font-family: 'Segoe UI';
+
+}
