--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,86 +7,6 @@ page-home {
     }
 
 // HEADER SECTION //
-.header{
-   
-    margin: 0;
-    padding: 0 0 0 0px;
-}
-.title .toolbar-title {
-    width: auto;
-    display:inline-block;
-  }
-.logoTitle{
-    padding: 0 !important;
-    display: inline-block;
-    width: auto;
-}
-
-.mainLogo{
-    max-width: 100%;
-    height: 32px !important;
-    float: left;
-    margin: 8px 0 0 10px !important;
-}
-.badge{
-    font-size: 10px !important;
-  
-}
-
-.profile{
-    float: right;
-    padding-top: 3px;
-}
-
-.notifiation{
-    font-size:20px !important;
-    position: relative;
-    top:5px;
-    padding: 0 !important;
-    margin: 0 !important;
-    right: -15px;
-    color: #000 !important;
-}
-
-.count{
-    background: #00667f;
-    padding: 4px;
-    border-radius: 50%;
-    color: #fff;
-    position: relative;
-    left: 0px;
-    top: -6px;
-}
-
-.userDetails{
-    display:inline-block;
-}
-
-
-    .avatar{
-        max-width: 100% !important;
-        display:inline-block;
-        width:30px;
-    }
-
-    ion-avatar.userDetails:after {
-        content: "\f078";
-        font-family: FontAwesome;
-        color: #888684;
-        font-size: 9px;
-    } 
-.popOver{
-    font-size: 9px !important;
-    display: inline-block;
-    position: relative;
-    top: -1px;
-    left: 0px;
-    padding: 0 !important;
-    margin: 0 !important;
-    font-weight: lighter;
-}
-
-
 
 // VISITS SECTION //
 
@@ -147,6 +67,21 @@ page-home {
     top:0px;
     font-size: 14px;
 }
+.noUpcomingVisits{
+    margin-top: 5px;
+    padding: 15px;
+    font-weight: bold; 
+   
+}
+.clearLeft{
+    clear: both;
+}
+.noUpcomingVisitsfuture{
+    padding: 15px;
+    color: #fff;
+    background: rgba(0, 0, 0, .7);
+    border-radius: 5px;
+}
 
 .listMyVisit{
     padding-top: 134px; 
@@ -206,12 +141,13 @@ page-home {
 }
 
 .viewDetails {
-    float: left;
-    min-height: 44px;
-    width: 100%;
+    min-height: 40px;
+    width: 90%;
+    margin: 0 15px 15px 15px;
     color: #fff;
     font-size: 20px;
     font-weight: initial;
+    border-radius: 20px;
     background: #00667f;
 }
 
