--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -57,7 +57,7 @@ page-home {
     float: right;
     font-weight: normal;
     width: 27%;
-
+    text-align: right;
 }
 
 .daysLeft i{
@@ -142,8 +142,8 @@ page-home {
 
 .viewDetails {
     min-height: 40px;
-    width: 90%;
-    margin: 0 15px 15px 15px;
+    width: 92%;
+    margin: 0 4% 4%;
     color: #fff;
     font-size: 20px;
     font-weight: initial;
@@ -214,6 +214,7 @@ page-home {
     margin: 2.6% !important;
     border-radius: 8px;
     border: none !important;
+    background-color: transparent;
 }
 .presentContent{
     width: 100%;
@@ -260,9 +261,9 @@ page-home {
     // font-family: Interstate;
     font-size: 20px;
     color:#fff !important;
-    padding: 3.2% 0px 4.4% 4%;
+    padding: 3.2% 4% 4%;
     border:none;
-    font-weight: normal;  
+    font-weight: normal; 
 }
 
 .pastView{
@@ -330,12 +331,13 @@ page-home {
 //     box-shadow: none;
 // }
 ion-card-content{
-padding: 0 !important;
+padding: 0 4% !important;
 }
 .fa{
-    margin: 0 2.5% 2% 4.4%;
+    margin: 0 2.5% 2% 0;
     font-size: 23px;
     color: #888684;
+    width: 23px;
 }
 
 .item-inner{
